--- a/about.html
+++ b/about.html
@@ -1,136 +1,138 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About | TK Remodeling</title>
-  <meta name="description" content="Licensed & Insured General Contractor serving Greater Kansas City and Johnson County, Kansas. Commercial build-outs, tenant improvements, and spa/salon construction."/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>About | TK Remodeling — Kansas City General Contractor</title>
+  <meta name="description" content="TK Remodeling is a licensed and insured general contractor serving Greater Kansas City and Johnson County, Kansas. Commercial build-outs, tenant improvements, and coordinated, inspection-ready execution." />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
 
-<header class="topbar">
-  <div class="container">
-    <div class="nav">
-      <a class="brand" href="index.html">
-        <div class="mark">TK</div>
-        <div class="name">
-          <strong>TK Remodeling</strong>
-          <span>Licensed & Insured General Contractor</span>
+<body>
+  <!-- NAV (same as index) -->
+  <header class="site-header">
+    <div class="container">
+      <nav class="navbar">
+        <a class="brand" href="index.html">
+          <img src="logo-white.png" alt="TK Remodeling logo" />
+          <div class="brand-text">
+            <strong>TK Remodeling</strong>
+            <span>Licensed &amp; Insured General Contractor</span>
+          </div>
+        </a>
+
+        <div class="nav-links">
+          <a href="projects.html">Commercial</a>
+          <a href="residential.html">Residential</a>
+          <a href="restoration.html">Restoration</a>
+          <a href="about.html" aria-current="page" style="color:#fff;border-bottom-color:rgba(255,255,255,.5);">About</a>
+          <a class="cta" href="contact.html">Contact</a>
         </div>
-      </a>
-      <nav class="links">
-        <a href="projects.html">Commercial</a>
-        <a href="residential.html">Residential</a>
-        <a href="restoration.html">Restoration</a>
-        <a href="about.html" class="active">About</a>
-        <a href="contact.html" class="btn primary">Contact</a>
       </nav>
     </div>
-  </div>
-</header>
+  </header>
 
-<main class="section">
-  <div class="container">
-    <h2>About TK Remodeling</h2>
+  <main class="section">
+    <div class="container">
+      <h2>About TK Remodeling</h2>
+      <p class="sub">
+        Licensed &amp; Insured General Contractor serving <strong>Greater Kansas City</strong> and <strong>Johnson County, Kansas</strong>.
+      </p>
 
-    <p class="lead">
-      TK Remodeling is a licensed and insured general contractor serving Greater Kansas City
-      and Johnson County, Kansas.
-    </p>
+      <div class="grid-3">
+        <div class="card">
+          <h3>Commercial-First Execution</h3>
+          <p>
+            We focus on commercial build-outs and tenant improvements that require planning, coordination, and inspection-ready delivery.
+          </p>
+        </div>
 
-    <p>
-      We focus on structured commercial build-outs and tenant improvements for retail, medical,
-      office, restaurant, convenience, and spa/salon environments. Our work emphasizes clear scope,
-      disciplined scheduling, coordinated trade management, and inspection-ready execution.
-    </p>
+        <div class="card">
+          <h3>Built for Coordination</h3>
+          <p>
+            Built for projects that require coordination — not patchwork renovation. Clear scope, clear schedule, clean closeout.
+          </p>
+        </div>
 
-    <div class="grid-2" style="margin-top:18px;">
-      <div>
+        <div class="card">
+          <h3>Inspection-Ready Closeout</h3>
+          <p>
+            We manage trades, permitting touchpoints, punch, and documentation so turnover is clean and predictable.
+          </p>
+        </div>
+      </div>
+
+      <div style="height:22px;"></div>
+
+      <div class="card">
         <h3>What We Do</h3>
-        <p>
-          Commercial projects typically ranging from 2,000 to 10,000 square feet,
-          requiring coordination across trades, inspections, and regulatory compliance.
+        <p style="margin-top:6px;">
+          TK Remodeling delivers structured commercial build-outs and tenant improvements with disciplined scheduling and coordinated trades.
+          We’re especially strong in environments where plumbing + ventilation + layout coordination matter — including <strong>spa and nail salon build-outs</strong>.
+        </p>
+
+        <div style="height:14px;"></div>
+
+        <p style="margin:0;color:var(--muted);font-size:14px;">
+          Typical commercial scopes: <strong>2,000–10,000 SF</strong> build-outs across office, medical, restaurant, retail, convenience, and spa/salon environments.
         </p>
       </div>
-      <div>
-        <h3>How We Work</h3>
-        <p>
-          From demolition through final inspection, we manage the full scope of work —
-          ensuring projects move efficiently and close out clean.
+
+      <div style="height:22px;"></div>
+
+      <h2>Our Process</h2>
+      <p class="sub">Simple. Organized. Built for commercial timelines.</p>
+
+      <div class="grid-3">
+        <div class="card">
+          <h3>1) Preconstruction</h3>
+          <p>
+            Scope review, site walk, scheduling plan, trade coordination, and early code/permitting considerations.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>2) Build</h3>
+          <p>
+            Disciplined schedule, coordinated trades, clean jobsite management, and proactive updates.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>3) Closeout</h3>
+          <p>
+            Punch completion, inspection support, documentation, and clean turnover to get you to opening day.
+          </p>
+        </div>
+      </div>
+
+      <div style="height:22px;"></div>
+
+      <div class="card">
+        <h3>Service Area</h3>
+        <p style="margin:0;">
+          Greater Kansas City metro and Johnson County, Kansas — including Overland Park, Olathe, Leawood, Lenexa, Prairie Village, Mission, and Merriam.
         </p>
+      </div>
+
+      <div style="height:22px;"></div>
+
+      <div class="card">
+        <h3>Ready to talk?</h3>
+        <p style="margin:0 0 12px;color:var(--muted);">
+          If your project needs coordination, schedule discipline, and inspection-ready closeout, we’re a fit.
+        </p>
+        <a class="btn btn-primary" href="contact.html">Request a Consultation</a>
       </div>
     </div>
+  </main>
 
-    <div class="spacer"></div>
-
-    <h2>Our Process</h2>
-
-    <div class="grid-2">
-      <div>
-        <h3>Preconstruction</h3>
-        <p>
-          Site walkthrough, scope definition, budget alignment, and early trade coordination.
-          We plan for permitting and inspection sequencing up front.
-        </p>
-      </div>
-
-      <div>
-        <h3>Construction</h3>
-        <p>
-          Structured scheduling, licensed trade supervision, and active project oversight
-          with consistent communication from start to finish.
-        </p>
-      </div>
-
-      <div>
-        <h3>Closeout</h3>
-        <p>
-          Final inspections, punch list completion, and clean turnover — coordinated through
-          certificate of occupancy when required.
-        </p>
-      </div>
-
-      <div>
-        <h3>Credibility</h3>
-        <p>
-          Licensed &amp; Insured General Contractor<br/>
-          Commercial General Liability Coverage: $1,000,000+<br/>
-          Built for projects that require coordination — not patchwork renovation.
-        </p>
-      </div>
+  <footer class="footer">
+    <div class="container">
+      <small>© 2026 TK Remodeling. Licensed &amp; Insured General Contractor.</small>
     </div>
-
-    <div class="spacer"></div>
-
-    <h2>Service Area</h2>
-    <p>
-      TK Remodeling provides commercial construction services throughout Overland Park, Olathe,
-      Leawood, Lenexa, Prairie Village, Mission, Merriam, and the greater Kansas City metropolitan area.
-    </p>
-
-    <div class="spacer"></div>
-
-    <div class="cta">
-      <h3>Request a Project Consultation</h3>
-      <p class="lead">Share your project location, timeline, and scope. We’ll follow up to discuss next steps.</p>
-      <a class="btn primary" href="contact.html">Contact</a>
-    </div>
-  </div>
-</main>
-
-<footer class="footer">
-  <div class="container">
-    <div class="row">
-      <div>© <span id="year"></span> TK Remodeling</div>
-      <div>Greater Kansas City • Johnson County, Kansas</div>
-    </div>
-  </div>
-</footer>
-
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
-
+  </footer>
 </body>
 </html>
